# pyProjetcts

./: .env  .env.example  .gitignore  Dockerfile  PROJECT_CONTEXT.odt  README.md  alembic.ini  docker-compose.yml  inicializaProjPython.sh  pyproject.toml  rag.db  readme.txt  requirements.txt  setup.ps1  taxSearch_schema.sql
alembic/: alembic.ini  env.py
alembic/versions/: 0001_initial_schema.py  0002_hybrid_search_fts.py
data/: cf88.txt
docker/grafana/dashboards/: rag_dashboard.json
docker/postgres/: init.sql
postgres/: init.sql
scripts/: run_ingestion.py  seed_cf88.py  validate_database.py
scripts/data/: cf88.txt
src/app/: main.py
src/app.egg-info/: SOURCES.txt
src/app/api/: deps.py  main.py  metrics.py
src/app/api/middleware/: rate_limit.py
src/app/api/routers/: ask.py  health.py
src/app/api/schemas/: ask.py
src/app/application/: __init__.py  ai_service.py  answer_validator.py  document_ingestion_service.py  ingest_service.py  prompt_governance.py  rag_service.py
src/app/application/chunking/: juridical_chunker.py
src/app/application/ingestion/: full_ingestion_pipeline.py  ingestion_orchestrator.py
src/app/application/interfaces/: llm_client.py
src/app/application/persistence/: ingestion_persistence_service.py
src/app/application/rag/: rag_answer_service.py  rag_prompt_builder.py  rag_retriever.py
src/app/core/: config.py  database.py  logging.py  observability.py
src/app/domain/: ai_responses.py  answer.py  document.py  document_chunk.py  rag.py  rag_response.py  retrieval.py  telemetry.py
src/app/infrastructure/ai/: gemini_client.py  llm_client.py  llm_stub.py
src/app/infrastructure/cache/: memory_cache.py
src/app/infrastructure/embeddings/: local_embedder.py
src/app/infrastructure/ingest/: base_loader.py  html_loader.py  pdf_loader.py  text_normalizer.py  xml_loader.py
src/app/infrastructure/observability/: telemetry_collector.py  telemetry_repository.py
src/app/infrastructure/persistence/: base.py  models.py  vector_store.py
src/app/infrastructure/queue/: celery_app.py  tasks.py
src/app/infrastructure/rag/: chunker.py  document_repository.py  embedder.py  keyword_scorer.py  local_embedder.py  pgvector_retriever.py  postgres_vector_store.py  sqlite_vector_store.py  token_chunker.py  vector_store.py
src/app/infrastructure/rate_limit/: simple_rate_limiter.py
src/app/infrastructure/telemetry/: postgres_telemetry.py
src/app/ingestion/: normalizer.py  pipeline.py
src/app/ingestion/loaders/: html_loader.py  pdf_loader.py  xml_loader.py
src/automation_ai.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_chunking_juridical.py  test_rag_integrity.py  test_retriever_scores.py
