[project]
name = "automation-ai"
version = "0.1.0"
description = "Automação de processos com IA"
requires-python = ">=3.11"

dependencies = [
  "python-dotenv",
  "pydantic",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

select = [
  "E",  # pycodestyle (erros)
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "UP", # pyupgrade
]

ignore = [
  "E501", # line length (Black resolve)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
